metacatui/src/main/webapp/js/themes/snap/css/metacatui.css
/* ... */
		
	.sidr .subnav-head{
		font-size: 1.6em;
		margin: 28px 40px 12px 30px;
		font-family: "PT Serif", Georgia, serif;
	}
	
	.sidr .nav-title{
		font-size: 23px;
		font-family: "PT Serif", Georgia, serif;
		color: #e5e5e5;
		line-height: 1.1;
		font-style: italic;
		padding-left: 30px;
		padding-top: 28px;
		padding-bottom: 9px;
	}
	
	.sidr input.searchField{
		padding: 10px 10px 9px 10px;
		background-color: #FFFFFF;
		border: none;
		border-radius: 0px;
		-moz-border-radius: 0px;
		-webkit-border-radius: 0px;
		color: #5d5d5d;
		outline: none;
		font-family: "PT Serif", Georgia, serif;
		font-size: 1.5em;
		line-height: 2em;
		height: 2.2em;
		margin: 0 0 0 30px;
		width: 200px;
		-webkit-transition: all 0.2s ease-out;
		-moz-transition: all 0.2s ease-out;
		-ms-transition: all 0.2s ease-out;
		-o-transition: all 0.2s ease-out;
		transition: all 0.2s ease-out;
	}
	
	.sidr .previous{
		margin: 28px 40px 35px 30px;
		border-bottom: 1px solid #4b4b4b;
	}
	
	ul > div.previous > a{
		padding-left: 0px;
		margin-bottom: 10px;
		color: #B8B8B8;
	}
	
	ul > div.previous >a > span{
		color: #B8B8B8;
	}
	
	ul > div.previous:hover > a > span{
		color: #FFFFFF;
	}
	
	ul > div.previous > a > img{
		float: left;
		margin-right: 10px;
		opacity: 0.6;
	}
	
	ul > div.previous:hover > a > img{
		opacity: 1;
	}
	
	.menu-item.open .sub-menu{
		display: block;
		left: 0px;
		background-color: #353535;
	}
	
/* METADATA VIEW CSS
-------------------------------------------------- */
	
	#Metadata .well{;
		border: 1px solid #CCCCCC;
		box-shadow: none;
		-moz-box-shadow: none;
		
	}
	
	#Metadata .well strong{
		font-weight: 400;
	}
	
	#Metadata h4{
		font-weight: 600;
	}
	
	#Metadata .nav-header{
		text-transform: none;
	}
	
	#Metadata .nav-list > .active > a{
		font-weight: 700;
		background-color: #840C11;
		text-shadow: none;
		color: #FFFFFF;
	}
	#Metadata .nav-list > .active > a:hover{
		background: none;
		color: #840C11;
	}
	
	
	#Metadata .nav > li > a:hover{
		text-shadow: none;
		color: #0F375E;
		opacity: 1;
				-webkit-transition: all 0.3s ease-out;
      transition: all 0.3s ease-out;
	}
	
	#downloadPackage > .btn-group{
		width: 100%;
	}
	
	#downloadPackage > a,
	#downloadPackage > .btn-group > a{
		width: 80%;
		background-color: #789a01;
		color: #FFFFFF;
	}
	
	#attributeTabs > li > a{
		font-style: normal;
		font-weight: 400;
		font-size: .8em;
		line-height: 1.2em;
	}
	
	 .dropdown-menu > li > a.btn,
	 .dropdown-menu > li > a{
    	background-color: #FFFFFF;
    	color: #789a01;
    	font-family:"Open Sans", Arial, sans-serif;
    	font-weight: bold;
    	font-style: normal;
    	font-size: 1em;
    }
    
    .dropdown-menu > li > a.btn:hover,
    .dropdown-menu > li > a:hover{
    	background-image: none;
    	background-color: #789a01;
 		color: #FFFFFF;
    }
    
/* Registry CSS
-------------------------------------------------- */
    #RegistryEntryForm, 
    #RegistryLogin, 
    #RegistryResponse, 
    #RegistryEntryReview, 
    #RegistryGuide {
		/*margin-top: 110px;*/
		min-height: 800px;
    }
    
    /* Larger modal for guide content */
    .modal.large {
    	width: 80%;
    	margin-left: -40%;
    }
    
	/* Inherit for these registry labels */
	.label {
	  display: inherit;
	  padding: inherit;
	  font: inherit;
	  line-height: inherit;
	  color: inherit;
	  white-space: inherit;
	  vertical-align: inherit;
	  background-color: inherit;
	  -webkit-border-radius: inherit;
	     -moz-border-radius: inherit;
	          border-radius: inherit;
	}    
	
	.accordion-heading a.accordion-toggle{
		display: inline-block;
		padding: 0px;
	}
	
/* Combobox styles, overlay text input on select
<!-- example here -->
<div class="select-editable">
  <select onchange="this.nextElementSibling.value=this.value">
    <option value=""></option>
    <option value="sample">sample</option>
  </select>
  <input type="text" name="keyword" value=""/>
</div>
-------------------------------------------------- */     
	.select-editable {
		position: relative; 
		height: 30px; 
	}
	.select-editable select { 
		position:absolute; 
		top: 0px; 
		left: 0px; 
		width: 220px; 
		height: 29px;
	}
	.select-editable input {
		position:absolute; 
		top: 0px;
		left: 0px; 
		width: 197px; 
		padding: 1px; 
		height: 25px;
	}
	.select-editable select:focus, 
	.select-editable input:focus { 
		outline:none; 
	}	

  /* SIDEBAR CSS
  -------------------------------------------------- */
    
    #sidebar > .filter-contain,
    #results-view{
    	padding: 0 7%;
    	width: 85%;
    }
    
    #sidebar > .filter-contain > .row-fluid {
   	  margin-bottom: 30px;
   }
   
    #sidebar > .filter-contain > .row-fluid.title {
   	  margin-bottom: 0px;
   	  position: relative;
   	  font-size: 1.1em;
   }
    
    /*-- Search buttons next to text inputs --*/
    .filter.btn{
    	background-color: #333333;
    	background-image: none;
    	color: #FFFFFF;
    	border-radius: 0px;
    	-moz-border-radius: 0px;
    	-webkit-border-radius: 0px;
    	border: 1px solid #000000;
    	height: 30px;
    	display: inline-block;
    	margin-left: -3%;
    	width: 20%;
    	padding: 0px;
    	vertical-align: top;
    }
    
    .filter.btn > i{
    	margin-bottom: 2px;
    	display: block;
    	color: #999999;
    }
    
    .filter.btn > i:hover{
    	color: #FFFFFF;
    }
    
    /*-- Inputs for search filters --*/
    input.filter{
    	border-radius: 0px;
    	-webkit-border-radius: 0px;
    	-moz-border-radius: 0px;
    	border: 1px solid #999999;
    	border-right: 0px;
    	height: 20px;
    	background-color: #FFFFFF;
    	background-image: none;
    	font: 400 0.8em/20px "PT Serif", Georgia, serif;
    	width:80%;
    	padding: 0 0 0 2%;
    	height: 28px;
    	vertical-align: top;
    	float: left;
    	margin-bottom: 0px;
    }
    
	#filter-year input.filter[type="checkbox"]{
		width: 15px;
		height: 20px;
		min-height: 20px;
		margin-top: 0px;
		font-size: 13px;
	}
/* ... */

